--- a/style.css
+++ b/style.css
@@ -1,12 +1,22 @@
 // <uniquifier>: Use a uniquifier for the class name
 
 body {
-  font-family: "Raleway", sans-serif;
-  background-color: #f5f5f5;
   margin: 0;
   padding: 0;
-  color: #292d32c2;
-  font-size: 16px;
+}
+
+.wrapper {
+  background-color: #f5f5f5;
+  max-width: 3000px;
+  margin: auto;
+}
+
+.rounded-img {
+  border-radius: 22px;
+}
+
+.fw-500 {
+  font-weight: 500;
 }
 
 .tb {
