--- a/style.css
+++ b/style.css
@@ -3,6 +3,17 @@ body {
   padding: 0;
 }
 
+.banner {
+  background: url("./assets/banner.jpg") center/cover no-repeat;
+  padding: 100px;
+}
+
+@media (max-width: 768px) {
+  .banner {
+    padding: 20px;
+  }
+}
+
 .wrapper {
   background-color: #f5f5f5;
   max-width: 3000px;
