--- a/style.css
+++ b/style.css
@@ -3,9 +3,34 @@ body {
   padding: 0;
 }
 
+* {
+  font-family: "Rubik", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 .banner {
+  position: relative;
   background: url("./assets/banner.jpg") center/cover no-repeat;
   padding: 100px;
+}
+
+.banner::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: linear-gradient(
+    rgba(0, 0, 0, 0.7),
+    rgba(0, 0, 0, 0.7)
+  ); /* Adjust the alpha value to control darkness */
+}
+
+.banner .text-center {
+  position: relative;
+  z-index: 1; /* Ensure the text remains on top of the overlay */
 }
 
 @media (max-width: 768px) {
